Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59517

Android Audio - multiple copies of sound files.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.14.2, 5.15.0 Beta1
    • 5.7.0
    • Multimedia
    • None
    • Android
    • Android
    • cbdf4561f5cdb6ee95583f14a3769c3124228586 (qt/qtmultimedia/5.14)

    Description

      When I build application which contains multiple sound files (background music, etc.) on Android platform, every time I fresh start my application, the size of application's "Data" increases by the size of all audio files.

      Whenever application starts, a copy of every sound file is created in /data/data/package_name/files on device's storage. e.g.: /data/data/org.qtproject.example.AndroidMp3Test/files/libAndroidMp3Test.so.EV9626.mp3. These files are never deleted, and after multiple launches application's data size can reach few hundred MB.

      I've created a simple project which allows reproduction of this bug:
      https://github.com/karamazi/QtAndroidAudioBug

      To reproduce:

      • Build project on Android platform.
      • Run and wait few seconds.
      • Kill application.
      • Run it again.
      • Size of "Data" should increase by the size of mp3 file.

      To my knowledge, this behaviour occurs regardless of audio file type.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            valentyn.doroshchuk Valentyn Doroshchuk
            zibi Zbigniew Rzepka
            Votes:
            2 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes